<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

	<name>teensy_drive</name>
	<version>0.0.0</version>
	<description>Communication with the teensy-drive MCU.</description>
	<maintainer email="pokusew@seznam.cz">Martin Endler</maintainer>
	<license>Apache License 2.0</license>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

	<depend>std_msgs</depend>
	<depend condition="$ROS_VERSION == 1">f1tenth_race</depend>
	<depend condition="$ROS_VERSION == 2">teensy_drive_msgs</depend>

    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 2">rclcpp</depend>

	<test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
	<test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

	<export>
    <!-- Should not be required (as ROS1 defaults to catkin), but with the other dependency it is completely lost. -->
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <!-- ROS2 Build type -->
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
	</export>

</package>
