<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teensy_drive</name>
  <version>0.0.0</version>
  <description>
    Communication with the teensy-drive MCU.
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>Apache License 2.0</license>

  <url type="repository">https://github.com/CTU-F1T/teensy_drive</url>

  <author email="pokusew@seznam.cz">Martin Endler</author>

  <!-- Build tool. For ROS1 leave this here. -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <!-- Packages dependencies. -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend condition="$ROS_VERSION == 1">f1tenth_race</depend>
  <depend condition="$ROS_VERSION == 2">teensy_drive_msgs</depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <!-- Any other parameters can be stored here. -->
  <export>
    <index url="git@github.com:CTU-F1T/teensy_drive.git" />

    <!-- Should not be required (as ROS1 defaults to catkin), but with the other dependency it is completely lost. -->
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <!-- ROS2 Build type -->
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
